Avoid overlapping of social icons

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ h2 {
 
 .header .social-links {
     display: flex;
-    margin-top: -40px;
 }
 
 .header .social-link {
